@@ -1,9 +1,9 @@
 package org.tidecloak.tide.iga.authorizer;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.persistence.EntityManager;
 import jakarta.ws.rs.BadRequestException;
+import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.keycloak.common.util.MultivaluedHashMap;
 import org.keycloak.component.ComponentModel;
@@ -12,19 +12,13 @@ import org.keycloak.models.jpa.entities.RoleEntity;
 import org.keycloak.services.resources.admin.AdminAuth;
 import org.midgard.Midgard;
 import org.midgard.models.*;
-import org.midgard.models.InitializerCertificateModel.InitializerCertifcate;
-import org.midgard.models.RequestExtensions.UserContextSignRequest;
-import org.midgard.models.UserContext.UserContext;
+import org.midgard.models.Policy.*;
 import org.tidecloak.base.iga.ChangeSetProcessors.ChangeSetProcessorFactory;
 import org.tidecloak.base.iga.ChangeSetProcessors.models.ChangeSetRequest;
 import org.tidecloak.base.iga.utils.BasicIGAUtils;
-import org.tidecloak.base.iga.utils.LicenseHistory;
-import org.tidecloak.jpa.entities.AccessProofDetailEntity;
-import org.tidecloak.jpa.entities.AuthorizerEntity;
-import org.tidecloak.jpa.entities.ChangesetRequestEntity;
+import org.tidecloak.jpa.entities.*;
 import org.tidecloak.jpa.entities.Licensing.LicenseHistoryEntity;
-import org.tidecloak.jpa.entities.LicensingDraftEntity;
-import org.tidecloak.jpa.entities.drafting.RoleInitializerCertificateDraftEntity;
+import org.tidecloak.jpa.entities.drafting.PolicyDraftEntity;
 import org.tidecloak.jpa.entities.drafting.TideRoleDraftEntity;
 import org.tidecloak.shared.enums.ChangeSetType;
 import org.tidecloak.shared.enums.DraftStatus;
@@ -34,100 +28,90 @@ import org.tidecloak.shared.models.SecretKeys;
 import org.tidecloak.base.iga.ChangeSetProcessors.ChangeSetProcessorFactoryProvider;
 
 import javax.xml.bind.DatatypeConverter;
-import java.net.URI;
 import java.util.*;
 
-import static org.tidecloak.base.iga.TideRequests.TideRoleRequests.commitRoleInitCert;
-import static org.tidecloak.base.iga.TideRequests.TideRoleRequests.getDraftRoleInitCert;
+import static org.tidecloak.base.iga.TideRequests.TideRoleRequests.commitRolePolicy;
+import static org.tidecloak.base.iga.TideRequests.TideRoleRequests.getDraftRolePolicy;
 import static org.tidecloak.base.iga.utils.BasicIGAUtils.isAuthorityAssignment;
 import static org.tidecloak.base.iga.utils.BasicIGAUtils.sortAccessProof;
 
 public class MultiAdmin implements Authorizer{
 
     @Override
-    public Response signWithAuthorizer(ChangeSetRequest changeSet, EntityManager em, KeycloakSession session, RealmModel realm, List<?> draftEntities, AdminAuth auth, AuthorizerEntity authorizer, ComponentModel componentModel) throws Exception {
-        IdentityProviderModel tideIdp = session.identityProviders().getByAlias("tide");
-        ObjectMapper objectMapper = new ObjectMapper();
-        ChangesetRequestEntity changesetRequestEntity = em.find(ChangesetRequestEntity.class, new ChangesetRequestEntity.Key(changeSet.getChangeSetId(), changeSet.getType()));
+    public Response signWithAuthorizer(ChangeSetRequest changeSet,
+                                       EntityManager em,
+                                       KeycloakSession session,
+                                       RealmModel realm,
+                                       List<?> draftEntities,
+                                       AdminAuth auth,
+                                       AuthorizerEntity authorizer,
+                                       ComponentModel componentModel) throws Exception {
 
-        if (changesetRequestEntity == null){
-            throw new BadRequestException("No change-set request entity found with this recordId and type " + changeSet.getChangeSetId() + " , " + changeSet.getType());
-        }
+        ObjectMapper mapper = new ObjectMapper();
 
-        var config = componentModel.getConfig();
-
-        String defaultAdminUiDomain = tideIdp.getConfig().get("changeSetEndpoint");
-        String customAdminUiDomain = tideIdp.getConfig().get("CustomAdminUIDomain");
-        String redirectUrlSig = tideIdp.getConfig().get("changeSetURLSig");
-
-        URI redirectURI = new URI(defaultAdminUiDomain);
-        UserSessionModel userSession = session.sessions().getUserSession(realm, auth.getToken().getSessionId());
-        String port = redirectURI.getPort() == -1 ? "" : ":" + redirectURI.getPort();
-        String voucherURL = redirectURI.getScheme() + "://" + redirectURI.getHost() + port + "/realms/" +
-                session.getContext().getRealm().getName() + "/tidevouchers/fromUserSession?sessionId=" +userSession.getId();
-
-        URI uri = Midgard.CreateURL(
-                auth.getToken().getSessionId(),
-                redirectURI.toString(),//userSession.getNote("redirectUri"),
-                redirectUrlSig,
-                tideIdp.getConfig().get("homeORKurl"),
-                config.getFirst("clientId"),
-                config.getFirst("gVRK"),
-                config.getFirst("gVRKCertificate"),
-                realm.isRegistrationAllowed(),
-                Boolean.valueOf(tideIdp.getConfig().get("backupOn")),
-                tideIdp.getConfig().get("LogoURL"),
-                tideIdp.getConfig().get("ImageURL"),
-                "approval",
-                tideIdp.getConfig().get("settingsSig"),
-                voucherURL, //voucherURL,
-                ""
+        ChangesetRequestEntity changesetRequestEntity = em.find(
+                ChangesetRequestEntity.class,
+                new ChangesetRequestEntity.Key(changeSet.getChangeSetId(), changeSet.getType())
         );
 
-        URI customDomainUri = null;
-        if(customAdminUiDomain != null) {
-            customDomainUri = Midgard.CreateURL(
-                    auth.getToken().getSessionId(),
-                    customAdminUiDomain,//userSession.getNote("redirectUri"),
-                    tideIdp.getConfig().get("customAdminUIDomainSig"),
-                    tideIdp.getConfig().get("homeORKurl"),
-                    config.getFirst("clientId"),
-                    config.getFirst("gVRK"),
-                    config.getFirst("gVRKCertificate"),
-                    realm.isRegistrationAllowed(),
-                    Boolean.valueOf(tideIdp.getConfig().get("backupOn")),
-                    tideIdp.getConfig().get("LogoURL"),
-                    tideIdp.getConfig().get("ImageURL"),
-                    "approval",
-                    tideIdp.getConfig().get("settingsSig"),
-                    voucherURL, //voucherURL,
-                    ""
+        if (changesetRequestEntity == null) {
+            throw new BadRequestException("No change-set request entity found with this recordId and type "
+                    + changeSet.getChangeSetId() + " , " + changeSet.getType());
+        }
+
+        Object draftEntity = draftEntities.get(0);
+        var authorityAssignment = BasicIGAUtils.authorityAssignment(session, draftEntity, em);
+
+        List<Map<String, Object>> responses = new ArrayList<>();
+
+        // --- First ---
+        Map<String, Object> firstResponse = new HashMap<>();
+        firstResponse.put("message", "Opening Enclave to request approval.");
+        firstResponse.put("changesetId", changesetRequestEntity.getChangesetRequestId());
+        firstResponse.put("requiresApprovalPopup", true);
+        firstResponse.put("changeSetDraftRequests", changesetRequestEntity.getRequestModel());
+        responses.add(firstResponse);
+
+        // --- Second ---
+        if (authorityAssignment != null) {
+            ChangesetRequestEntity policyReqEntity = em.find(
+                    ChangesetRequestEntity.class,
+                    new ChangesetRequestEntity.Key(authorityAssignment.getChangesetRequestId(), ChangeSetType.POLICY)
             );
+
+            Map<String, Object> secondResponse = new HashMap<>();
+            secondResponse.put("message", "Opening Enclave to request approval.");
+            secondResponse.put("changesetId", authorityAssignment.getChangesetRequestId());
+            secondResponse.put("requiresApprovalPopup", true);
+            secondResponse.put("changeSetDraftRequests", policyReqEntity.getRequestModel());
+            responses.add(secondResponse);
         }
 
-        Map<String, String> response = new HashMap<>();
-        response.put("message", "Opening Enclave to request approval.");
-        response.put("uri", String.valueOf(uri));
-        response.put("changeSetRequests", changesetRequestEntity.getDraftRequest());
-        response.put("requiresApprovalPopup", "true");
-        response.put("expiry", String.valueOf(changesetRequestEntity.getTimestamp() + 2628000)); // month expiry
-        if(customAdminUiDomain != null) {
-            response.put("customDomainUri", String.valueOf(customDomainUri));
-        }
-
-        return Response.ok(objectMapper.writeValueAsString(response)).build();
+        // Serialize to JSON string
+        String jsonString = mapper.writeValueAsString(responses);
+        return Response.ok(jsonString, MediaType.APPLICATION_JSON).build();
     }
 
     @Override
     public Response commitWithAuthorizer(ChangeSetRequest changeSet, EntityManager em, KeycloakSession session, RealmModel realm, Object draftEntity, AdminAuth auth, AuthorizerEntity authorizer, ComponentModel componentModel) throws Exception {
         IdentityProviderModel tideIdp = session.identityProviders().getByAlias("tide");
+        ClientModel realmManagement = session.clients().getClientByClientId(realm, Constants.REALM_MANAGEMENT_CLIENT_ID);
+
+        RoleModel tideRole = realmManagement.getRole(org.tidecloak.shared.Constants.TIDE_REALM_ADMIN);
+        TideRoleDraftEntity tideAdmin = em.createNamedQuery("getRoleDraftByRoleId", TideRoleDraftEntity.class)
+                .setParameter("roleId", tideRole.getId())
+                .getSingleResult();
+        var policyString = tideAdmin.getInitCert();
+        boolean isAuthorityAssignment = isAuthorityAssignment(session, draftEntity, em);
+
         ObjectMapper objectMapper = new ObjectMapper();
-        ChangesetRequestEntity changesetRequestEntity = em.find(ChangesetRequestEntity.class, new ChangesetRequestEntity.Key(changeSet.getChangeSetId(), changeSet.getType()));
+        var id = changeSet.getChangeSetId();
+        var type = changeSet.getChangeSetId().contains("policy") ? ChangeSetType.POLICY : changeSet.getType();
+        ChangesetRequestEntity changesetRequestEntity = em.find(ChangesetRequestEntity.class, new ChangesetRequestEntity.Key(id, type));
 
         if (changesetRequestEntity == null){
             throw new BadRequestException("No change-set request entity found with this recordId and type " + changeSet.getChangeSetId() + " , " + changeSet.getType());
         }
-
 
         var config = componentModel.getConfig();
         String authorizerType = authorizer.getType();
@@ -141,25 +125,6 @@ public class MultiAdmin implements Authorizer{
         proofDetails.sort(Comparator.comparingLong(AccessProofDetailEntity::getCreatedTimestamp).reversed());
 
         List<AccessProofDetailEntity> orderedProofDetails = sortAccessProof(proofDetails);
-        List<UserContext> orderedContext = orderedProofDetails.stream().map(a -> new UserContext(a.getProofDraft())).toList();
-
-        RoleModel tideRole = session.clients().getClientByClientId(realm, Constants.REALM_MANAGEMENT_CLIENT_ID).getRole(org.tidecloak.shared.Constants.TIDE_REALM_ADMIN);
-        RoleEntity role = em.getReference(RoleEntity.class, tideRole.getId());
-        TideRoleDraftEntity tideRoleEntity = em.createNamedQuery("getRoleDraftByRole", TideRoleDraftEntity.class)
-                .setParameter("role", role).getSingleResult();
-
-        InitializerCertifcate cert = InitializerCertifcate.FromString(tideRoleEntity.getInitCert());
-        UserContextSignRequest req = new UserContextSignRequest("Admin:1");
-        req.SetDraft(Base64.getDecoder().decode(changesetRequestEntity.getDraftRequest()));
-        req.SetUserContexts(orderedContext.toArray(new UserContext[0]));
-        req.SetCustomExpiry(changesetRequestEntity.getTimestamp() + 2628000); // expiry in 1 month
-        AdminAuthorizerBuilder authorizerBuilder = new AdminAuthorizerBuilder();
-        authorizerBuilder.AddInitCert(cert);
-        authorizerBuilder.AddInitCertSignature(tideRoleEntity.getInitCertSig());
-
-        changesetRequestEntity.getAdminAuthorizations().forEach(a -> {
-            authorizerBuilder.AddAdminAuthorization(AdminAuthorization.FromString(a.getAdminAuthorization()));
-        });
 
         int threshold = Integer.parseInt(System.getenv("THRESHOLD_T"));
         int max = Integer.parseInt(System.getenv("THRESHOLD_N"));
@@ -180,23 +145,29 @@ public class MultiAdmin implements Authorizer{
         settings.Threshold_T = threshold;
         settings.Threshold_N = max;
 
-        authorizerBuilder.AddAuthorizationToSignRequest(req);
 
-        boolean isAuthorityAssignment = isAuthorityAssignment(session, draftEntity, em);
+        ModelRequest req = ModelRequest.FromBytes(Base64.getDecoder().decode(changesetRequestEntity.getRequestModel()));
+        var authorityAssignment = BasicIGAUtils.authorityAssignment(session, draftEntity, em);
 
-        if(isAuthorityAssignment) {
-            RoleInitializerCertificateDraftEntity roleInitCert = getDraftRoleInitCert(session, changeSet.getChangeSetId());
+        if(authorityAssignment != null) {
+            PolicyDraftEntity roleInitCert = getDraftRolePolicy(session, changeSet.getChangeSetId());
             if(roleInitCert == null) {
                 throw new BadRequestException("Role Init Cert draft not found for changeSet, " + changeSet.getChangeSetId());
             }
-            req.SetInitializationCertificate(InitializerCertifcate.FromString(roleInitCert.getInitCert()));
             SignatureResponse response = Midgard.SignModel(settings, req);
 
-            for ( int i = 0; i < orderedProofDetails.size(); i++){
-                orderedProofDetails.get(i).setSignature(response.Signatures[i + 1]);
+            for ( int i = 0; i < orderedProofDetails.size() ; i++){
+                    orderedProofDetails.get(i).setSignature(response.Signatures[i]);
             }
-            commitRoleInitCert(session, changeSet.getChangeSetId(), draftEntity, response.Signatures[0]);
 
+            // sign policy now
+            ChangesetRequestEntity changesetRequest = em.find(ChangesetRequestEntity.class, new ChangesetRequestEntity.Key(authorityAssignment.getChangesetRequestId(), ChangeSetType.POLICY));
+            ModelRequest pReq = ModelRequest.FromBytes(Base64.getDecoder().decode(changesetRequest.getRequestModel()));
+            Policy policy = new Policy(Base64.getDecoder().decode(policyString));
+
+            pReq.SetPolicy(policy.ToBytes());
+            SignatureResponse pResp = Midgard.SignModel(settings, pReq);
+            commitRolePolicy(session, changeSet.getChangeSetId(), draftEntity, pResp.Signatures[0]); // get the last one
         } else {
             SignatureResponse response = Midgard.SignModel(settings, req);
 
@@ -209,6 +180,7 @@ public class MultiAdmin implements Authorizer{
 
         WorkflowParams workflowParams = new WorkflowParams(null, false, null, changeSet.getType());
         processorFactory.getProcessor(changeSet.getType()).executeWorkflow(session, draftEntity, em, WorkflowType.COMMIT, workflowParams, null);
+
         if (isAuthorityAssignment) {
             if (authorizer.getType().equals(org.tidecloak.shared.Constants.TIDE_INITIAL_AUTHORIZER)){
                 authorizer.setType(org.tidecloak.shared.Constants.TIDE_MULTI_ADMIN_AUTHORIZER);
@@ -227,7 +199,7 @@ public class MultiAdmin implements Authorizer{
         TideRoleDraftEntity tideRoleEntity = em.createNamedQuery("getRoleDraftByRole", TideRoleDraftEntity.class)
                 .setParameter("role", role).getSingleResult();
 
-        InitializerCertifcate cert = InitializerCertifcate.FromString(tideRoleEntity.getInitCert());
+        Policy policy = new Policy(Base64.getDecoder().decode(tideRoleEntity.getInitCert()));
 
         ComponentModel componentModel = realm.getComponentsStream()
                 .filter(x -> "tide-vendor-key".equals(x.getProviderId()))  // Use .equals for string comparison
@@ -239,15 +211,10 @@ public class MultiAdmin implements Authorizer{
         }
 
         MultivaluedHashMap<String, String> config = componentModel.getConfig();
-        ModelRequest req =  ModelRequest.New("RotateVRK", "1", "Admin:1", DatatypeConverter.parseHexBinary(changesetRequestEntity.getDraftRequest()));
+        var req = ModelRequest.FromBytes(Base64.getDecoder().decode(changesetRequestEntity.getRequestModel()));
 
+        req.SetPolicy(policy.ToBytes());
         req.SetCustomExpiry(changesetRequestEntity.getTimestamp() + 2628000); // expiry in 1 month
-        AdminAuthorizerBuilder authorizerBuilder = new AdminAuthorizerBuilder();
-        authorizerBuilder.AddInitCert(cert);
-        authorizerBuilder.AddInitCertSignature(tideRoleEntity.getInitCertSig());
-        changesetRequestEntity.getAdminAuthorizations().forEach(a -> {
-            authorizerBuilder.AddAdminAuthorization(AdminAuthorization.FromString(a.getAdminAuthorization()));
-        });
 
         int threshold = Integer.parseInt(System.getenv("THRESHOLD_T"));
         int max = Integer.parseInt(System.getenv("THRESHOLD_N"));
@@ -268,7 +235,6 @@ public class MultiAdmin implements Authorizer{
         settings.Threshold_T = threshold;
         settings.Threshold_N = max;
 
-        authorizerBuilder.AddAuthorizationToSignRequest(req);
         SignatureResponse response = Midgard.SignModel(settings, req);
 
         // fetch latest history for this draft request (you already have this)
